# evaluv

backend/resume-evaluation/: .gitignore  pyproject.toml
backend/resume-evaluation/app/: config.py  database.py  main.py
backend/resume-evaluation/app/background/: process_embedding.py
backend/resume-evaluation/app/controllers/: __init__.py  auth_controller.py  job_controller.py  resume_controller.py  user_controller.py
backend/resume-evaluation/app/middleware/: auth_middleware.py  rate_limit.py
backend/resume-evaluation/app/models/: job.py  resume.py  token.py  user.py
backend/resume-evaluation/app/routes/: __init__.py  auth_routes.py  job_routes.py  resume_routes.py  user_routes.py
backend/resume-evaluation/app/schemas/: auth.py  job.py  user.py
backend/resume-evaluation/app/services/: auth_service.py  job_service.py  resume_service.py  user_services.py
backend/resume-evaluation/app/utils/: auth_deps.py  embedding_utils.py  exceptions.py  qdrant_client.py  redis_client.py  security.py
backend/resume-evaluation/tests/app/routes/: conftest.py  test_auth_routes.py  test_job_routes.py  test_user_routes.py
