[project]
name = "resume-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis==2.0.1",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "fastapi==0.104.1",
    "greenlet==3.2.4",
    "httpx==0.26.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.3.4",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.5",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "slowapi==0.1.9",
    "sqlmodel==0.0.16",
    "uvicorn==0.24.0",
    "psycopg2>=2.9.11",
    "redis>=7.0.1",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "-v --tb=short"

filterwarnings = [
    "ignore::DeprecationWarning:passlib.utils",
    "ignore::pydantic._internal._config.PydanticDeprecatedSince20",
]
